--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "hclrs",
     "cs3330"
   ],
-  "repository": "https://github.com/atom/language-hclrs",
+  "repository": "https://github.com/50Wliu/language-hclrs",
   "license": "MIT",
   "engines": {
     "atom": ">=1.32.0 <2.0.0"
